[package]
name = "m2"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "m2"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
arrayref = "0.3.7"
winnow = "=0.4.1"
community-managed-token = { version = "0.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.10.0", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "1.3.0", features = ["no-entrypoint"] }
open_creator_protocol = { version = "0.3.5", features = ["cpi"] }
solana-program = "1.14.13"
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
